Report the bisection as minimum surviving heap, and make it say so
The -Xmx search measures the smallest heap a configuration completes on. A
JVM fails at live set plus GC headroom plus fragmentation, and headroom
scales with allocation rate, which is the one thing the two arms differ in
by about 5x. So the figure is a provisioning requirement, not a retained
set, and a ratio read off the grid is not a ratio of retention. The script
now states that at the top, and the output is named accordingly.

Six defects found in review of the v3 run:

- The floor was never probed. A cell that already fit in LOW_MB converged
  to 95 MB and printed it, a heap size that was never tried. It now probes
  LOW_MB first and reports AT_OR_BELOW_LOW.
- Neither the collector nor -Xms was pinned, so the figures were specific
  to the JDK defaults that produced them and could not be read alongside
  the 4 GB JMH runs. Now -Xms = -Xmx with G1 explicit.
- Survival near the boundary is a sigmoid, and requiring N consecutive
  survivals converges on an unstated quantile that depends on the draws it
  got. Each cell is now measured REPLICATES times, every replicate is its
  own row, and the result is the half-open bracket (low_mb, high_mb] where
  both bounds were actually run.
- REPEATS_ON was 1, justified by identical segments-processed counts. That
  shows the workload is deterministic; what varies at the OOM boundary is
  GC and allocation timing, which is not. Now 2.
- No timeout, so a JVM thrashing without tripping the GC overhead limit
  hung the queue. Now wrapped, with a distinct outcome. The kill backstop
  and the kernel OOM killer share exit 137, so they are separated by
  elapsed time: recording a wedged JVM as an OOM would have manufactured
  evidence for the claim under test.
- No per-attempt record. Roughly 900 launches collapsed into 48 rows, so a
  non-monotone response was unrecoverable afterwards. Each attempt is now
  logged with its outcome, duration, and segments processe